--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "axios": "^1.7.2",
     "cors": "^2.8.5",
+    "cron": "^3.1.7",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "https": "^1.0.0",
     "mongoose": "^8.5.1",
     "nodemon": "^3.1.4",
     "request-ip": "^3.3.0"
